# Sys_final_project

./: CMakeLists.txt  DESIGN  DEVLOG  README.md  bat.c  bat.h  copy.c  makefile  server  server.c  user  user.c
answers/: answers.h  base2.c  diff21.c  diff21.c~  driver.c  driver.c~  fib.c  fib.c~  gcf.c  lastDigit.c  nearHundred.c  sum.c
questions/: base.c~  base2.c  diff21.c  gcf.c  lastDigit.c  nearHundred.c  stub.c  sum.c
temp/1234/: sum.c
temp/3471/: base2.c  sum.c
